<resources>
    <string name="app_name">App para IoT</string>
    <string name="login_title">Log In</string>
    <string name="login_button_login">Ingresar</string>
    <string name="login_input_username">Nombre de usuario</string>
    <string name="login_input_password">Contraseña</string>
    <string name="login_input_email">Correo electronico</string>
    <string name="menu_title">data</string>
</resources>
